subprocess: prefer g_unix_open_pipe() over pipe2()

pipe2() is apparently not available for us on Mac OS X. While
that is not a major target for us, if it's easy to support we
might as well do it.

https://bugzilla.gnome.org/show_bug.cgi?id=772279